--- a/package.json
+++ b/package.json
@@ -10,8 +10,9 @@
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.3",
     "react-scripts": "4.0.3",
-    "web-vitals": "^1.0.1",
-    "redux": "^4.0.5"
+    "redux": "^4.0.5",
+    "redux-logger": "^3.0.6",
+    "web-vitals": "^1.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
